--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta property="og:url" content="https://www.cccfutures.com/" />
     <link rel="canonical" href="https://www.cccfutures.com/" />
-    <link rel="icon" href="ccc_favicon.png" />
+    <link rel="shortcut icon" type="image/jpg" href="/ccc_favicon.png"/>
     <link rel="icon" href="ccc_favicon.svg" type="image/svg+xml" />
-    <meta name="theme-color" content="#FAFF00" />
+    <meta name="theme-color" content="#FAFF00"/>
   </head>
 
   <body>
@@ -44,16 +44,16 @@
         <p>Speculative fiction from a future with the Civilian Climate Corps</p>
       </div>
       <div class="site__header__logo">
-        <img src="./ccc_favicon.svg" alt="CCC Fiction Logo" />
+        <img src="./ccc.svg" alt="CCC Seal" />
       </div>
     </header>
 
     <section class="entry section__wrapper">
       <div class="entry__number headingstyle">1.</div>
       <div class="entry__text">
-        <h2>Game Trails <span class="author">Bryan Lehrer</span></h2>
+        <h2><a href="https://www.bryanlehrer.com/entries/ccc/">Game Trails</a><span class="author">Bryan Lehrer</span></h2>
         <p>
-          A girl follows a recuitment ad to Maine where she partakes in a game
+          A girl follows a mobile recuitment ad to Maine where she partakes in a game
           of conservation.
         </p>
         <div class="author__mobile">Bryan Lehrer</div>
@@ -63,7 +63,7 @@
     <section class="entry section__wrapper">
       <div class="entry__number headingstyle">2.</div>
       <div class="entry__text">
-        <h2>Breaking Up At The CCC <span class="author">James Ayres</span></h2>
+          <h2><a href="http://jfrancisayres.com/writing/sad-break-up-ccc/">Breaking Up at the CCC</a> <span class="author">James Ayres</span></h2>
         <p>
           Two young lovers join the CCC to fight wildfires but end up putting
           out the wildfires in their hearts.
@@ -75,22 +75,21 @@
     <section class="entry section__wrapper">
       <div class="entry__number headingstyle">3.</div>
       <div class="entry__text">
-        <h2>
-          Where The Sea Flows Uphill
+          <h2><a href="http://ltwp.net/ccc">Where the Sea Flows Uphill</a>
           <span class="author">Lukas Winkler-Prins</span>
         </h2>
         <p>
-          Two young lovers join the CCC to fight wildfires but end up putting
-          out the wildfires in their hearts.
+          In a future where oil still pumps across Southern California, can the
+          Tijuana River flow clean again?
         </p>
         <div class="author__mobile">Lukas Winkler-Prins</div>
       </div>
     </section>
 
     <footer class="site__footer section__wrapper">
-      <p class="headingstyle"><a href="/about">About</a></p>
-      <p class="headingstyle"><a href="#">Submit</a></p>
-      <p class="headingstyle"><a href="#">Follow</a></p>
+      <p class="headingstyle"><a href="about.html">About</a></p>
+      <p class="headingstyle"><a href="mailto:bryanlehrer@gmail.com?subject=Civilian%20Climate%20Futures%20Project%20Submission&body=Hey%20-%20Thanks%20for%20your%20interest%20in%20submitting%20to%20the%20project!%0D%0A%0D%0AJust%20say%20hello%20with%20this%20email%20and%20we'll%20respond%20with%20more%20information.">Submit</a></p>
+      <p class="headingstyle"><a href="https://twitter.com/CCCFutures">Follow</a></p>
     </footer>
   </body>
 </html>
