remove that mf hypen!!!

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           In a future where oil still pumps across Southern California, can the
           Tijuana River flow clean again?
         </p>
-        <div class="author__mobile">Lukas Winkler-Prins</div>
+        <div class="author__mobile">Lukas Winkler Prins</div>
       </div>
     </section>
 
