--- a/about.html
+++ b/about.html
@@ -59,17 +59,17 @@
           <u><a href="https://neguse.house.gov/imo/media/doc/CCC%20Letter%20-%20Final%20Signed%20(004).pdf" target="_blank">proposed</a></u> a vision for the program and its formal creation is expected by some by the end of the year.</p>
           &nbsp;
         <p>
-          Despite the inevitability of the CCC, we still don't know exactly what it will look like yet. Much of the design impetus for the idea has extended from the popular legacy of its New Deal predecessor. But the two programs exist over 100 years of vastly difering societal and environment circumstances. It's not uncommon to hear lawmakers and media outlets offer up buzzy words like resiliency, mitigation, jobs, infrastructure, and the like, to explain the CCC. Much is left up for imagination.</p>
+          Despite the inevitability of the CCC, we still don't know exactly what it will look like yet. Much of the design impetus for the idea has extended from the popular legacy of its New Deal predecessor. But the two programs exist over 100 years of vastly difering societal and environmental contexts. It's not uncommon to hear lawmakers and media outlets offer up buzzy words like resiliency, mitigation, jobs, infrastructure, and the like, to explain the CCC. Much is left up for imagination.</p>
           &nbsp;
         <p>
-          The CCC has the potential to confront several incredibly pressing problems the US faces. Clearly it's poised to mobilize a boot-on-the-ground response to climate change. Just as much as it's a technical solution it's a social solution as well. It will grant young people an opportunity to connect to and steward the natural environment in a way that seems increasingly untenable. Even if it remains undecided just how it will operate, it's clear that there's historic upside to a CCC designed thoughtfully and run intelligently.
+          The CCC has the potential to confront several incredibly pressing problems the US faces. Clearly it's poised to mobilize a boots-on-the-ground response to climate change. Just as much as it's a technical solution it's a social solution as well. It will grant young people an opportunity to connect to and steward the natural environment in a way that seems increasingly untenable. Even if it remains undecided just how it will operate, it's clear that there's historic upside to a CCC designed thoughtfully and run intelligently.
         </p>
     </section>
     <section class="entry section__wrapper">
       <div class="about__text">
         <h2>About the Civilian Climate Futures Project</h2>
         <p>
-          The Civilian Climate Futures Project is a direct response to the unrealized nature of the CCC. Its objective is simple: give potential beneficiaries of the CCC a vision for what the program can look and and feel like.
+          The Civilian Climate Futures Project is a direct response to the unrealized nature of the CCC. Its objective is simple: give potential beneficiaries of the CCC a vision for what the program can look and feel like.
         </p>
         &nbsp;
         <p>
